linked libarys better

--- a/Gambling/Gambling.vcxproj
+++ b/Gambling/Gambling.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\library\SDL3_image-3.2.4\include;C:\library\SDL3_ttf-3.2.2\include\;C:\library\SDL3-devel-3.2.10-VC\SDL3-3.2.10\include\SDL3;$(IncludePath)</IncludePath>
+    <IncludePath>C:\library\SDL3_image-3.2.4\include;C:\library\SDL3_ttf-3.2.2\include\;C:\library\SDL3-devel-3.2.10-VC\SDL3-3.2.10\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\library\SDL3_image-3.2.4\lib\x64;C:\library\SDL3_ttf-3.2.2\lib\x64;C:\library\SDL3-3.2.10\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
